k8s/apps/networking/external-services/adguard/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: adguard
  namespace: networking
spec:
  ports:
    - name: http
      protocol: TCP
      port: &port 8080
      targetPort: *port
