k8s/apps/networking/external-services/adguard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app adguard
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: "nginx"
  rules:
    - host: &host "adguard.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
      secretName: "${SECRET_DOMAIN/./-}-tls"
